--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#780074" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <META http-equiv="content-type" content="text/html; charset=utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -12,20 +12,20 @@
     <LINK rel="canonical" href="harshivtravels.com"> <!-- Define Canonical !-->
     <link rel="shortcut icon" href="/favicon.ico">
 
-    <link href="/css/materialize.min.css" rel="stylesheet" type="text/css" />
-    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="css/materialize.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="/css/animate.min.css" rel="stylesheet" type="text/css" />
-    <link href="/css/owl.carousel.min.css" rel="stylesheet"/>
+    <link href="css/animate.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/owl.carousel.min.css" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,700;0,800;1,300&display=swap" rel="stylesheet">
     
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/materialize.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/js/owl.carousel.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
 
     <script type="text/javascript">
     $(document).ready(function()
@@ -120,7 +120,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="/" class="brand-logo left"><img src="/images/harshiv-travels-logo.svg"></a>
+                <a href="/" class="brand-logo left"><img src="images/harshiv-travels-logo.svg"></a>
                 <ul class="right">
                     <li><a href="https://wa.me/+918980541812"><i class="fa-brands fa-whatsapp"></i></a></li>
                     <li><a href="/"><i class="fa-brands fa-instagram"></i></a></li>
@@ -236,13 +236,13 @@
                 <div class="col l4 m4 s12">
                     <div class="card">
                         <div class="card-image">
-                            <img src = "/images/car-1.png">
+                            <img src = "images/car-1.png">
                         </div>
                         <div class="card-content">
                             <div class="card-icons">
-                                <img src="/images/ico/seat.svg">
-                                <img src="/images/ico/stick.svg">
-                                <img src="/images/ico/gas-pump.svg">
+                                <img src="images/ico/seat.svg">
+                                <img src="images/ico/stick.svg">
+                                <img src="images/ico/gas-pump.svg">
                             </div>
                             <a href="/" class="submit-btn">Book Now</a>
                         </div>
@@ -252,13 +252,13 @@
                 <div class="col l4 m4 s12">    
                     <div class="card">
                         <div class="card-image">
-                            <img src = "/images/car-2.png">
+                            <img src = "images/car-2.png">
                         </div>
                         <div class="card-content">
                             <div class="card-icons">
-                                <img src="/images/ico/seat.svg">
-                                <img src="/images/ico/stick.svg">
-                                <img src="/images/ico/gas-pump.svg">
+                                <img src="images/ico/seat.svg">
+                                <img src="images/ico/stick.svg">
+                                <img src="images/ico/gas-pump.svg">
                             </div>
                             <a href="/" class="submit-btn">Book Now</a>
                         </div>
@@ -268,15 +268,15 @@
                 <div class="col l4 m4 s12">
                     <div class="card">
                         <div class="card-image">
-                            <img src = "/images/car-1.png">
+                            <img src = "images/car-1.png">
                         </div>
                         <div class="card-content">
                             <div class="card-icons">
-                                <img src="/images/ico/seat.svg">
-                                <img src="/images/ico/stick.svg">
-                                <img src="/images/ico/gas-pump.svg">
+                                <img src="images/ico/seat.svg">
+                                <img src="images/ico/stick.svg">
+                                <img src="images/ico/gas-pump.svg">
                             </div>
-                            <a href="/" class="submit-btn">Book Now</a>
+                            <a href="#!" class="submit-btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -284,15 +284,15 @@
                 <div class="col l4 m4 s12">
                     <div class="card">
                         <div class="card-image">
-                            <img src = "/images/car-2.png">
+                            <img src = "images/car-2.png">
                         </div>
                         <div class="card-content">
                             <div class="card-icons">
-                                <img src="/images/ico/seat.svg">
-                                <img src="/images/ico/stick.svg">
-                                <img src="/images/ico/gas-pump.svg">
+                                <img src="images/ico/seat.svg">
+                                <img src="images/ico/stick.svg">
+                                <img src="images/ico/gas-pump.svg">
                             </div>
-                            <a href="/" class="submit-btn">Book Now</a>
+                            <a href="#!" class="submit-btn">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                 <!-- slide 01 -->
                 <div class="slide">
                     <div class="owl-slide">
-                        <img src="/images/65.jpg">
+                        <img src="images/65.jpg">
                         <div class="owl-text">
                             <span>"The staff and service was great. Everything was smooth and easy. They also guided me so well. Thankyou for your services".</span>  
                         </div>
@@ -320,7 +320,7 @@
                 <!-- slide 02 -->
                 <div class="slide">
                     <div class="owl-slide">
-                        <img src="/images/79.jpg">
+                        <img src="images/79.jpg">
                         <div class="owl-text">
                             <span>"Harshiv Travels offers a brilliant service. Affordable, quick and easy to navigate that gives me the confidence and belief that this legal necessity has been done right!"</span>  
                         </div>
@@ -329,7 +329,7 @@
                 <!-- slide 03 -->
                 <div class="slide">
                     <div class="owl-slide">
-                        <img src="/images/8.jpg">
+                        <img src="images/8.jpg">
                         <div class="owl-text">
                             <span>"This was an amazingly easy experience. Thank you, worth the money I paid for a premium professional"</span>
                         </div>
@@ -346,7 +346,7 @@
         <div class="container">
             <div class="row">
                 <div class="col l3 m3 s12">
-                    <img class="footer-logo" src="/images/harshiv-travels-logo.svg">
+                    <img class="footer-logo" src="images/harshiv-travels-logo.svg">
                     <h3>Harshiv Travels<br><small>Your Travel Buddy</small></h3>
                 </div>
                 <div class="col l9 m9 s12 center-align">
