update html css

--- a/index.html
+++ b/index.html
@@ -39,29 +39,6 @@
         });
         //   tabs
         $('ul.tabs').tabs();
-        // autocomplete
-        // $('#autocomplete-input').autocomplete({
-        //     data: {
-        //         "Surat": '',
-        //         "Ahemdabad": '',
-        //         "Vadodara": '',
-        //         "Rajkot": '',
-        //         "Delhi": '',
-        //         "Vasai":'',
-        //         "Virar":'',
-        //         "Daman":'',
-        //         "Gurgaon":'',
-        //         "Mumbai":'',
-        //         "Noida":null,
-        //         "Nashik":null,
-        //         "Pune":null,
-        //         "Nagpur":null,
-        //         "Aurangabad":null,
-        //         "Udaipur":null,
-        //         "Jaipur": null,
-        //         "Ajmer": null,
-        //     },
-        // });
         // carousel
         $("#owl-demo").owlCarousel({
             items: 1,
@@ -194,19 +171,19 @@
 
             <div class="col s12 trip-tabs-content" id="SINGLETRIP">
                 <section class="travel-search">
-                    <form action="#" class="travel-search-form">
+                    <form autocomplete="off" action="#" class="travel-search-form">
                         <p>One Way Trip</p>
-                        <section>
+                        <section class="autocomplete">
                             <label for="autocomplete">Pick-up City Name</label>
-                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <input type="text" id="myInput" class="autocomplete">
                         </section>
-                        <section>
+                        <section class="autocomplete">
                             <label  for="autocomplete-input">Drop-off City Name</label>
-                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <input type="text" id="myInput" class="autocomplete">
                         </section>
                         <section>
                             <label>Choose a date</label>
-                            <input type="text" class="datepicker">
+                            <input type="date" class="datepicker">
                         </section>
                         <button class="submit-btn">Submit</button>
                     </form>
@@ -215,11 +192,11 @@
 
             <div class="col s12 trip-tabs-content" id="ROUNDTRIP">
                 <section class="travel-search">
-                    <form class="travel-search-form">
+                    <form autocomplete="off" class="travel-search-form">
                         <p>Round Trip</p>
                         <section>
                             <label for="autocomplete-input">Pick-up City Name</label>
-                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <input type="text" id="myInput" class="autocomplete">
                         </section>
                         <section>
                             <label>Drop-off City Name</label>
@@ -236,11 +213,11 @@
 
             <div class="col s12 trip-tabs-content" id="LOCAL">
                 <section class="travel-search">
-                    <form class="travel-search-form">
+                    <form autocomplete="off" class="travel-search-form">
                         <p>Local</p>
                         <section>
                             <label for="autocomplete-input">Pick-up City Name</label>
-                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <input type="text" id="myInput" class="autocomplete">
                         </section>
                         <section>
                             <label for="autocomplete-input">Drop-off City Name</label>
@@ -257,11 +234,11 @@
 
             <div class="col s12 trip-tabs-content" id="TRANSFER">
                 <section class="travel-search">
-                    <form class="travel-search-form">
+                    <form autocomplete="off" class="travel-search-form">
                         <p>Transfer</p>
                         <section>
                             <label for="autocomplete-input">Pick-up City Name</label>
-                            <input type="text" id="autocomplete-input" class="autocomplete">
+                            <input type="text" id="myInput" class="autocomplete">
                         </section>
                         <section>
                             <label>Drop-off City Name</label>
@@ -472,6 +449,111 @@
             <i class="material-icons">expand_less</i>
         </a>
     </div>
+    <script>
+            // autocomplete
+    function autocomplete(inp, arr) {
+    /*the autocomplete function takes two arguments,
+    the text field element and an array of possible autocompleted values:*/
+    var currentFocus;
+    /*execute a function when someone writes in the text field:*/
+    inp.addEventListener("input", function(e) {
+        var a, b, i, val = this.value;
+        /*close any already open lists of autocompleted values*/
+        closeAllLists();
+        if (!val) { return false;}
+        currentFocus = -1;
+        /*create a DIV element that will contain the items (values):*/
+        a = document.createElement("DIV");
+        a.setAttribute("id", this.id + "autocomplete-list");
+        a.setAttribute("class", "autocomplete-items");
+        /*append the DIV element as a child of the autocomplete container:*/
+        this.parentNode.appendChild(a);
+        /*for each item in the array...*/
+        for (i = 0; i < arr.length; i++) {
+            /*check if the item starts with the same letters as the text field value:*/
+            if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
+            /*create a DIV element for each matching element:*/
+            b = document.createElement("DIV");
+            /*make the matching letters bold:*/
+            b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+            b.innerHTML += arr[i].substr(val.length);
+            /*insert a input field that will hold the current array item's value:*/
+            b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+            /*execute a function when someone clicks on the item value (DIV element):*/
+            b.addEventListener("click", function(e) {
+                /*insert the value for the autocomplete text field:*/
+                inp.value = this.getElementsByTagName("input")[0].value;
+                /*close the list of autocompleted values,
+                (or any other open lists of autocompleted values:*/
+                closeAllLists();
+            });
+            a.appendChild(b);
+            }
+        }
+    });
+    /*execute a function presses a key on the keyboard:*/
+    inp.addEventListener("keydown", function(e) {
+        var x = document.getElementById(this.id + "autocomplete-list");
+        if (x) x = x.getElementsByTagName("div");
+        if (e.keyCode == 40) {
+            /*If the arrow DOWN key is pressed,
+            increase the currentFocus variable:*/
+            currentFocus++;
+            /*and and make the current item more visible:*/
+            addActive(x);
+        } else if (e.keyCode == 38) { //up
+            /*If the arrow UP key is pressed,
+            decrease the currentFocus variable:*/
+            currentFocus--;
+            /*and and make the current item more visible:*/
+            addActive(x);
+        } else if (e.keyCode == 13) {
+            /*If the ENTER key is pressed, prevent the form from being submitted,*/
+            e.preventDefault();
+            if (currentFocus > -1) {
+            /*and simulate a click on the "active" item:*/
+            if (x) x[currentFocus].click();
+            }
+        }
+    });
+    function addActive(x) {
+        /*a function to classify an item as "active":*/
+        if (!x) return false;
+        /*start by removing the "active" class on all items:*/
+        removeActive(x);
+        if (currentFocus >= x.length) currentFocus = 0;
+        if (currentFocus < 0) currentFocus = (x.length - 1);
+        /*add class "autocomplete-active":*/
+        x[currentFocus].classList.add("autocomplete-active");
+    }
+    function removeActive(x) {
+        /*a function to remove the "active" class from all autocomplete items:*/
+        for (var i = 0; i < x.length; i++) {
+        x[i].classList.remove("autocomplete-active");
+        }
+    }
+    function closeAllLists(elmnt) {
+        /*close all autocomplete lists in the document,
+        except the one passed as an argument:*/
+        var x = document.getElementsByClassName("autocomplete-items");
+        for (var i = 0; i < x.length; i++) {
+        if (elmnt != x[i] && elmnt != inp) {
+            x[i].parentNode.removeChild(x[i]);
+        }
+        }
+    }
+    /*execute a function when someone clicks in the document:*/
+    document.addEventListener("click", function (e) {
+        closeAllLists(e.target);
+    });
+    }
+
+        /*An array containing all the country names in the world:*/
+        var countries = ["Ahemdabad", "Aurangabad", "Bhuj", "Daman", "Delhi", "Gurgaon", "Noida", "Pune", "Udaipur", "jaipur", "Nagpur", "Indore", "Ujjain", "Nasik", "Mumbai", "Surat", "Vadodara"];
+
+        /*initiate the autocomplete function on the "myInput" element, and pass along the countries array as possible autocomplete values:*/
+        autocomplete(document.getElementById("myInput"), countries);
+    </script>
     
     </body>
 </html>
